--- a/index.css
+++ b/index.css
@@ -1,21 +1,28 @@
+body {
+}
+
 main {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 800px;
+  height: 850px;
+}
+
+.container {
+  border-radius: 10px;
+  width: 80%;
+  background-color: rgb(103, 155, 155);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 div.content {
+  padding: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 500px;
-  border-radius: 10px;
-
-  height: 600px;
-  background-color: rgb(103, 155, 155);
 }
 
 input {
@@ -24,16 +31,22 @@ input {
   border-radius: 10px;
 }
 
-#result {
-  border-radius: 10px;
-  background-color: bisque;
-  min-width: 210px;
-  height: 40px;
-  border: 1px solid black;
-}
-
 p {
   display: flex;
   justify-content: center;
   align-items: center;
+  us: 10px;
+  background-color: bisque;
+  min-width: 205px;
+  height: 40px;
+  border: 1px;
+  border-radius: 10px;
+}
+
+button {
+  min-width: 205px;
+  height: 40px;
+  border: 0px solid white;
+  border-radius: 10px;
+  background-color: rgb(243, 170, 74);
 }
